BJS2-52694 fix